--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -13,3 +13,5 @@ mes-configs.limiteDeProduits= 4
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+#Ribbon
+microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
